Further fixed the positioning of the main navigation menu so that it is centered-aligned with the rest of the content.

--- a/Tabs_N_Blanks/css/company.css
+++ b/Tabs_N_Blanks/css/company.css
@@ -16,6 +16,7 @@ box-sizing: border-box;
 /* Styling for About-Us */
 
 #about-us {
+	margin-top: 2em;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 3rem;
